[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reaper-backup"
version = "0.1.0"
description = "REAPER migration: discovery, lean backup, restore, Cockos export zip inspection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
reaper-backup = "reaper_backup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7"]
